No longer plot saccuracy as it is not helpful

--- a/simx/Snakefile
+++ b/simx/Snakefile
@@ -9,7 +9,7 @@ ENDS = config.get("ends", ("se", "pe"))
 PROGRAMS = expand("strobealign-{commit[key]}", commit=COMMITS)
 if config["programs"]:
     PROGRAMS.extend(config["programs"])
-PLOTS = ("accuracy", "saccuracy", "aligned", "time", "memory")
+PLOTS = ("accuracy", "aligned", "time", "memory")
 
 COMMIT_TO_HASH_MAP = {c["key"]: c["hash"] for c in COMMITS}
 
